--- a/frontend/src/features/custom/page/Custom.css
+++ b/frontend/src/features/custom/page/Custom.css
@@ -1,13 +1,140 @@
-.rank-base {
+/* 커스텀방 어두운 뒷배경 */
+.custom_base {
     background-image: url("../../../assets/images/dark_base.PNG");
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    position: relative;
-    padding-top: 10%;
-    padding-bottom: 10%;
-    display: block;
+    height: 100vh;
+    font-family: JsaHON;
+    /* overflow: auto; */
+    justify-content: center;
 }
+
+.layout-container {
+  display: block;
+  padding-top: 9%;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    height: 1rem;
+}
+
+/* 방 생성 버튼 */
+.create_room {
+  background: #dcdcdc;
+  display: block;
+  position: relative;
+  float: left;
+  width: 8%;
+  padding: 0;
+  margin: 10px 20px 10px 0;
+  font-weight: 500;
+  text-align: center;
+  line-height: 150%;
+  color: rgb(0, 0, 0);
+  /* border-radius: 8%; */
+  transition: all 0.2s ;
+  margin: 5rem;
+  font-size: 2rem;
+  box-shadow: 0px 0px 0px 0px #585f5c;
+}
+
+.create_room:hover {
+  scale: 1.2;
+}
+
+/* modal창 외부화면 */
+.Modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* 검색 창 */
+.search {
+  width: 15rem;
+  height: 2.8rem;
+  font-size: 20px;
+  border: 0;
+  /* border-radius: 15px; */
+  padding-left: 20px;
+  background-color: rgb(233, 233, 233);
+}
+
+/* 검색 버튼 */
+.search_base > button {
+  width: 5rem;
+  height: 3rem;
+  font-size: 20px;
+  border: 2;
+  outline: rgb(0, 0, 0);
+}
+
+
+
+
+
+/* 드롭다운 1 */
+@keyframes slide-fade-in-dropdown-animation {
+    0% {
+      transform: translateY(-100%);
+    }
+  
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  .slide-fade-in-dropdown {
+    overflow: hidden;
+  }
+  
+  .slide-fade-in-dropdown > ul {
+    animation: slide-fade-in-dropdown-animation .4s ease;
+  }
+  
+  @keyframes slide-fade-out-dropdown-animation {
+    0% {
+      transform: translateY(0);
+    }
+  
+    100% {
+      transform: translateY(-100%);
+    }
+  }
+  
+  .slide-fade-out-dropdown {
+    overflow: hidden;
+  }
+  
+  .slide-fade-out-dropdown > ul {
+    animation: slide-fade-out-dropdown-animation 0.4s ease;
+    animation-fill-mode: forwards;
+  }
+  
+  .components-dropdown > ul {
+    position: relative;
+    top: 5px;
+    margin-top: 0;
+    margin-bottom: 5px;
+    padding-left: 0;
+    list-style: none;
+  }
+
