--- a/frontend/src/features/game/Game.css
+++ b/frontend/src/features/game/Game.css
@@ -1,11 +1,14 @@
 .gamediv {
-  width: 1920px;
-  height: 1080px;
-  background-image: url('../../assets/images/gamebg.png');
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+  background-image: url('../../assets/images/gamebg.png');
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  overflow-y: auto;
 }
 
 .camdiv {
@@ -47,10 +50,20 @@
   margin: auto;
   width:360px;
   height: 650px;
-  background-image: url('../../assets/images/title.png');
   background-size: cover;
+  background-image: url(../../assets/images/title.png);
 }
 
+.temp {
+  width: 100%;
+  height: 100%;
+  background-color: blueviolet;
+  background-image: url(../../assets/images/red_room.png);
+}
+.titleImg{
+  width: 10%;
+  background-size: 10%;
+}
 .titlecontent {
   width: 310px;
   height: 550px;
@@ -111,31 +124,39 @@
 
 .chatdiv {
   width: 20%;
-
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  z-index: 0;
+  margin-right: 1em;
   /* border: 1px solid */
 }
 
-.chatbg {
-  margin-top: 60px;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
-  width: 365px;
-  height: 814px;
-  background-image: url('../../assets/images/chatroom2.png');
+.infobg{
+  margin-top: 1em;
+  height: 30%;
+  width: 100%;
+  background-color: blueviolet;
   background-size: cover;
+  z-index: 2;
 }
 
-.chatbox {
-  padding-top: 60px;
-  padding-right: 19px;
-  padding-left: 16px;
-  padding-bottom: 20px;
-  height: 814px;
+.infobox{
+  background-color: violet;
+}
+
+.chatbg {
+  width: 100%;
+  height: 55%;
+  background-size: cover;
+  background-image: url(../../assets/images/yellow-paper.jpg);
+  /* background-color: rgb(255,255,255,0.6); */
+  border-style: groove;
+  margin-top: 1em;
 }
 
 .chatbox__messages {
-  height: 630px;
+  height: 90%;
   margin-top: auto;
   display: flex;
   flex-direction: column;
@@ -144,22 +165,53 @@
 }
 
 .chatbox__footer {
-  
+  margin-top: 2%;
+  height: 8%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 20px 20px;
-  background-color:beige;
-  margin-top: 20px;
+  background-color: rgba(255, 249, 200, 0);
+  background-size: cover;
+  border-top: 1px dotted;
+  padding-bottom: 20px;
+}
+
+#chat_message {
+  width: 80%;
+  margin-top: 3px;
+}
+
+.chat_send {
+  margin-top: 3px;
+  background-color: beige;
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 5px;
+  transition-duration: 0.4s;
+  font-weight: 1000;
+  width: fit-content;
+  position: relative;
+  width: 20%;
+  margin-left: 1em;
+}
+
+.chat_send:hover{
+  background-color: saddlebrown;
+  color: white;
 }
 
 .icons {
-  width: 384px;
-  height: 206px;
+  width: 100%;
+  height: 15%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.icon:hover{
+  transform: scale(1.5);
 }
 
 .ready-icon {
@@ -167,10 +219,20 @@
   width: 100px;
   height: 100px;
 }
+
+.ready-icon:hover{
+  cursor: pointer;
+  transform: scale(1.5);
+}
+
 .icon {
   margin: auto;
   width: 100px;
   height: 100px;
+}
+
+.icon:hover{
+  cursor: pointer;
 }
 
 .stream-container {
