--- a/frontend/src/features/rank/page/Rank.css
+++ b/frontend/src/features/rank/page/Rank.css
@@ -1,49 +1,93 @@
-.rank-base {
+/* 랭크방 어두운 뒷배경 */
+.rank_base {
     background-image: url("../../../assets/images/dark_base.PNG");
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 100vh;
-    max-width: 100%;
-    max-height: 100vh;
-    position: relative;
     font-family: JsaHON;
-}
-
-.room_item {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: wheat;
-    padding: 1rem;
-    /* border-radius: 10% / 50%; */
-}
-
-.room_button {
-    display: flex;
-    align-items: center;
+    /* overflow: auto; */
     justify-content: center;
-    flex-flow: column;
 }
 
-.room_button > button {
-    margin-top: 1rem;
+.layout_container {
+  display: block;
+  padding-top: 9%;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bottom {
     display: flex;
     flex-flow: row;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
+    height: 1rem;
 }
 
-
+/* 방 생성 버튼 */
 .create_room {
-    justify-content: space-between;
-    margin: 3rem;
-    margin-left: 20%;
-    /* margin-right: 20%; */
+  background: #dcdcdc;
+  display: block;
+  position: relative;
+  float: left;
+  width: 8%;
+  padding: 0;
+  margin: 10px 20px 10px 0;
+  font-weight: 500;
+  text-align: center;
+  line-height: 150%;
+  color: rgb(0, 0, 0);
+  /* border-radius: 8%; */
+  transition: all 0.2s ;
+  margin: 5rem;
+  font-size: 2rem;
+  box-shadow: 0px 0px 0px 0px #585f5c;
 }
+
+.create_room:hover {
+  scale: 1.2;
+}
+
+/* modal창 외부화면 */
+.Modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* 검색 창 */
+.search {
+  width: 15rem;
+  height: 2.8rem;
+  font-size: 20px;
+  border: 0;
+  /* border-radius: 15px; */
+  padding-left: 20px;
+  background-color: rgb(233, 233, 233);
+}
+
+/* 검색 버튼 */
+.search_base > button {
+  width: 5rem;
+  height: 3rem;
+  font-size: 20px;
+  border: 2;
+  outline: rgb(0, 0, 0);
+}
+
+
 
 
 
