--- a/frontend/src/features/mypage/page/MyPage.css
+++ b/frontend/src/features/mypage/page/MyPage.css
@@ -1,3 +1,13 @@
+.mb-3 {
+    font-size: 25px;
+    font-family: JsaHON;
+}
+
+.mb-0 {
+    font-size: 25px;
+    font-family: JsaHON;
+}
+
 .messagesuccess {
     color: green;
 }
