--- a/frontend/src/features/game/Game.css
+++ b/frontend/src/features/game/Game.css
@@ -104,9 +104,9 @@
   margin: 0;
 }
 
-.subjecttopic{
-font-size: 70px;
-margin-bottom: 0;
+.subjectTopic{
+  font-size: 70px;
+  margin-bottom: 0;
 }
 
 .subjectcontent {
