--- a/frontend/src/features/game/UserVideo.css
+++ b/frontend/src/features/game/UserVideo.css
@@ -1,25 +1,14 @@
 video {
-    width: 400px;
-    height: 300px;
-    float: left;
-    cursor: pointer;
-    border-radius: 5%;
-}
-
-.kingdiv video {
-    width: 500px;
-    height: 375px;
+    width: 100%;
+    height: 100%;
     float: left;
     cursor: pointer;
     border-radius: 5%;
 }
 
 .streamcomponent {
-    height: 300px;
-}
-
-.kingstreamcomponent {
-    height: 300px;
+    width: 90%;
+    height: 100%;
     position: relative;
 }
 
@@ -27,17 +16,19 @@ video {
     width: 100px;
 }
 
+.replacement {
+    width: 100%;
+    height: 100%;
+}
+
 .crowndiv {
     position:absolute;
 }
-.streamcomponent div {
-    height: 288px;
-    background: #f8f8f8;
-    padding-left: 5px;
-    padding-right: 5px;
-    color: #777777;
-    font-weight: bold;
-    border-bottom-right-radius: 4px;
+
+.streamdiv {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 p{
