--- a/frontend/src/features/game/Game.css
+++ b/frontend/src/features/game/Game.css
@@ -67,6 +67,7 @@
   justify-content: space-evenly;
   background-color: rgb(255, 255, 255, 0.7);
   align-items: center;
+  border-radius: 5%;
 }
 
 .titleImg{
@@ -277,6 +278,10 @@
   background-image: url(../../assets/images/info_form.png);
   background-size: cover;
   z-index: 2;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .infobox{
