--- a/frontend/src/features/game/UserVideo.css
+++ b/frontend/src/features/game/UserVideo.css
@@ -27,26 +27,30 @@ video {
 
 .micdiv {
     position: absolute;
-    bottom: 0;
-    left: 10%;
+    bottom: 3%;
+    right: 10%;
     width: 10%;
     height: 10%;
+    background-color: aliceblue;
 }
 
 .mic{
     width:100%;
+    height: 100%;
 }
 
 .cameradiv{
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 3%;
+    right: 0;
     width: 10%;
     height: 10%;
+    background-color: aliceblue;
 }
 
 .camera{
     width:100%;
+    height: 100%;
 }
 
 .streamdiv {
