--- a/frontend/src/features/game/UserVideo.css
+++ b/frontend/src/features/game/UserVideo.css
@@ -13,7 +13,8 @@ video {
 }
 
 .crown {
-    width: 5%;
+    width: 100%;
+    height: 100%;
 }
 
 .replacement {
@@ -23,11 +24,13 @@ video {
 
 .crowndiv {
     position: absolute;
+    width: 20%;
+    height: 20%;
 }
 
 .micdiv {
     position: absolute;
-    bottom: 3%;
+    bottom: 1%;
     right: 10%;
     width: 10%;
     height: 10%;
@@ -41,7 +44,7 @@ video {
 
 .cameradiv{
     position: absolute;
-    bottom: 3%;
+    bottom: 1%;
     right: 0;
     width: 10%;
     height: 10%;
