--- a/frontend/src/features/game/UserVideo.css
+++ b/frontend/src/features/game/UserVideo.css
@@ -24,8 +24,8 @@ video {
 
 .crowndiv {
     position: absolute;
-    width: 20%;
-    height: 20%;
+    width: 5%;
+    margin-left: 1%;
 }
 
 .micdiv {
