--- a/frontend/src/features/game/UserVideo.css
+++ b/frontend/src/features/game/UserVideo.css
@@ -12,6 +12,12 @@ video {
     position: relative;
 }
 
+.kingstreamcomponent {
+    width: 90%;
+    height: 100%;
+    position: relative;
+}
+
 .crown {
     width: 100%;
     height: 100%;
